# GDS

./: .gitignore  Procfile  README.md  RUN.md  railway.json  requirements.txt
.github/workflows/: server-build.yml  tauri-build.yml
docs/: MCT.md  MOT.md  presentation.md
frontend/: .cta.json  package-lock.json  package.json  rename-shell.mjs  vite.config.ts
frontend/src/: global.d.ts  start.ts  styles.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src/components/: titlebar.tsx
frontend/src/hooks/: usePendingCommands.ts  useStock.ts
frontend/src/lib/: auth.ts  authProvider.ts  config.ts  dataProvider.ts  exporter.ts  i18nProvider.ts
frontend/src/routes/: __root.tsx  index.tsx
pharmacie/: db.sqlite3  gunicorn.conf.py  manage.py  pharmacie_server.spec  run_exe.py  server.py  start_gunicorn.sh
pharmacie/core/: admin.py  api_urls.py  api_views.py  pagination.py  serializers.py  views.py  views_dashboard.py
pharmacie/core/migrations/: 0001_initial.py  0002_fournisseur_magasin_service_actif_and_more.py  0003_utilisateur_can_add_commandes_and_more.py  0004_permission_remove_utilisateur_can_add_commandes_and_more.py  0005_utilisateur_service.py  0006_journal.py  0007_service_magasin.py  0008_lotproduit_magasin.py  0009_add_magasin_types.py
pharmacie/core/models/: __init__.py  base.py  commandes.py  fournisseurs.py  journal.py  lignes_commandes.py  magasins.py  mouvements.py  produits.py  roles.py  services.py  stocks.py  utilisateurs.py
pharmacie/pharmacie/: settings.py  urls.py  wsgi.py
(+73 files in other folders)
